--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
       >
     </nav>
     <hr />
+    <h2>Cursos de Dados</h2>
+    <nav>
+      <a href="https://neetcode.io/">Neetcode</a>
+      <a href="https://www.hackerrank.com/">Hackerrank</a>
+    </nav>
     <footer>
       <p>Direitos Reservados a Thaiz Daniele Kutz</p>
     </footer>
