--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
       <a href="https://neetcode.io/">Neetcode</a>
       <a href="https://www.hackerrank.com/">Hackerrank</a>
     </nav>
+    <hr />
+    <nav></nav>
     <footer>
       <p>Direitos Reservados a Thaiz Daniele Kutz</p>
     </footer>
