--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
       <a href="https://www.hackerrank.com/">Hackerrank</a>
     </nav>
     <hr />
-    <nav></nav>
+    <nav>
+      <a href="https://rpubs.com/">RPubs</a>
+    </nav>
     <footer>
       <p>Direitos Reservados a Thaiz Daniele Kutz</p>
     </footer>
